Bug 122430 - FILEOPEN: RTF: Incorrect font size
Summary: FILEOPEN: RTF: Incorrect font size
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF-Character
  Show dependency treegraph
 
Reported: 2019-01-02 16:36 UTC by Xisco Faulí
Modified: 2019-02-11 13:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.3 Master (36.38 KB, image/png)
2019-01-02 16:36 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-01-02 16:36:45 UTC
Created attachment 147947 [details]
comparison MSO 2010 and LibreOffice 6.3 Master

Steps to reproduce:
1. Open attachment 133747 [details] from bug 108266

-> Titolo 1 and Titolo 2 should be bold and 18. See attached comparison

Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 49c61f660d05ab13140d4349a0b3f6efba742022
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-01-02 16:38:09 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=49614a9ea971ff7f370f863ce8a2735aab973cee

author	Miklos Vajna <vmiklos@collabora.co.uk>	2018-09-24 23:07:16 +0200
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-09-25 08:40:12 +0200
commit 49614a9ea971ff7f370f863ce8a2735aab973cee (patch)
tree cb4dcde41909007d9f9c31d0b0d9e1cef2e0a43b
parent 7a8acab1ee7a9396b514e901b1e4fbd51bacb586 (diff)
tdf#119599 RTF import: fix missing deduplication of font size

Bisected with: bibisect-linux64-6.2

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2019-01-29 08:18:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/e45fbf479944b9ec940bdddfa8ee7d523244a9ba%5E%21

tdf#122430 RTF import: fix lost font size on footnote start

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2019-01-30 10:38:33 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: f1f84cf7fae3c777908cfc5357a067db731367ac
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this!!
Comment 4 Commit Notification 2019-02-11 13:55:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/63ee1e1b27b5a9b6b221a78a4567f76cba2a1adb%5E%21

tdf#122430 RTF import: fix lost font size on footnote start

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.