tdf#122430 RTF import: fix lost font size on footnote start

This become more visible since commit
49614a9ea971ff7f370f863ce8a2735aab973cee (tdf#119599 RTF import: fix
missing deduplication of font size, 2018-09-24) as now incorrect font
size from style affects the rendering result.

Change-Id: I5b339337f021e2fc359f6fc5f5aa2ed0bcf844b9
Reviewed-on: https://gerrit.libreoffice.org/67034
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>